--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,7 +6,9 @@ body {
 	height: 100vh;
 }
 
-
+.text-center {
+	text-align: center;
+}
 
 /* TOP-NAVIGATON section */
 
@@ -78,10 +80,15 @@ body {
 	background: lightblue;
 }
 
-.post-username {
+.friend-card {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
+
+.friend-username {
 	font-weight: bold;
 	font-size: 1.2rem;
-	text-align: center;
 }
 
 /* FOOTER section */
