--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -91,6 +91,11 @@ body {
 	font-size: 1.2rem;
 }
 
+.col-border {
+	border: 2px solid black;
+	box-shadow: 5px 3px 10px blue, -5px -3px 10px blue,  ;
+}
+
 /* FOOTER section */
 footer {
 	height: 5vh;
