--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -19,7 +19,7 @@ body {
 /* TOP-NAVIGATON section */
 
 .navbar {
-	height: 15vh;
+	height: 10vh;
 	background-color: grey;
 }
 
@@ -36,11 +36,6 @@ body {
 	font-weight: bold;
 }
 
-.nav-logout-color {
-	color: #f21b1b !important;
-	font-weight: bold;
-}
-
 .nav-text-font {
 	font-size: .9rem;
 }
@@ -53,12 +48,12 @@ body {
 
 .sidebar-nav {
 	background: #6e92c2; 
-	height: 80vh;
+	height: 85vh;
 	max-width: 13rem;
 	position: absolute;
 	top: 0;
 	left: 0;
-	margin-top: 15vh;
+	margin-top: 10vh;
 	padding-top: 1rem;
 	width: 13rem;
 	box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.1);
@@ -72,14 +67,20 @@ body {
 	color: #599fd9;
 }
 
+.nav-logout-color {
+	color: #f21b1b !important;
+/* 	font-weight: bold; */
+}
+
 /* PAGE CONTENT section */
 
 .page-content {
 	background: lightgrey;
 	width: calc(100% - 13rem); 
-	height: 80vh;
+	height: 85vh;
 	margin-left: 13rem;
 	overflow-y: auto;
+	padding: 1rem;
 }
 
 .page-content-friendship {
@@ -100,11 +101,24 @@ body {
 
 .col-border {
 	border: 2px solid black;
-	box-shadow: 5px 3px 10px blue, -5px -3px 10px blue,  ;
+/* 	box-shadow: 3px 3px 3px blue, -3px -3px 3px blue; */
+	background-color: #9191f2;
 }
 
+.col-border-friends {
+	background-color: #4daad1;
+}
 /* FOOTER section */
 footer {
 	height: 5vh;
 	background-color: grey;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+footer p {
+	margin: 0;
+	font-weight: bold;
+	font-size: 1.2rem;
 }
