--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,17 +10,17 @@ body {
 	text-align: center;
 }
 
-.text-center span {
+/* .text-center span {
 	font-size: 1.5rem;
 	font-weight: bold;
 	color: blue;
-}
+} */
 
 /* TOP-NAVIGATON section */
 
 header {
 	height: 10vh;
-	background-color: #fa7a0a;
+	background-color: #1968D4;
 }
 
 #avatar {
@@ -75,7 +75,7 @@ header {
 /* PAGE CONTENT section */
 
 .page-content {
-	background: #ffa270;
+	background: lightblue;
 	width: calc(100% - 13rem); 
 	height: 85vh;
 	margin-left: 13rem;
@@ -108,6 +108,11 @@ header {
 .col-border-friends {
 	background-color: #4daad1;
 }
+
+.button-container {
+	margin: .5rem 0;
+}
+
 /* FOOTER section */
 footer {
 	height: 5vh;
