--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,6 +1,20 @@
 body {
 	margin: 0 auto;
-	background: lightblue;
+	background: #599FD9;
+}
+
+header {
+	height: 20vh;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+}
+
+header h2, h1 {
+	font-family: 'Saira Stencil One', cursive;
+	color: #ffffff;
+	margin: 0;
 }
 
 .login-form {
@@ -14,7 +28,7 @@ body {
 	display: flex;
 	flex-flow: column;
 	align-items: center;
-	background: white;	
+	background: #fff;	
 	position: fixed;
 }
 
@@ -35,7 +49,7 @@ body {
 	width: 90%;
 	margin-bottom: 1rem;
 	height: 4rem;
-	background: lightblue;
+	background: #599FD9;
 	border: none;
 	font-weight: bold;
 }
