update link name in sidebar

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -33,6 +33,26 @@ header h2 {
 	color: #ffffff;
 	margin: 0;
 }
+/* 
+.bl {
+	color: #176BEF;
+}
+
+.re {
+	color: #FF3E30;
+}
+
+.or {
+	color: #F7B529;
+}
+
+.gr {
+	color: #179C52;
+}
+
+header span {
+	margin-left: -5px;
+} */
 
 /****************************** SIDEBAR section *******************************/
 
