--- a/css/index_style.css
+++ b/css/index_style.css
@@ -11,10 +11,30 @@ header {
 	align-items: center;
 }
 
-header h2, h1 {
+header h1 {
 	font-family: 'Saira Stencil One', cursive;
 	color: #ffffff;
 	margin: 0;
+}
+
+.bl {
+	color: #176BEF;
+}
+
+.re {
+	color: #FF3E30;
+}
+
+.or {
+	color: #F7B529;
+}
+
+.gr {
+	color: #179C52;
+}
+
+header span {
+	margin-left: -10px;
 }
 
 .login-form {
